Fixed java backwards compatibility issue